# core-wr-nlp-pipeline

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: INPUT_FORMAT.md  OUTPUT_FORMAT.md
examples/example_inputs/: core_template.csv  reflection_template.txt
scripts/: make_figure1.py  robustness_metrics.py  run_pipeline.py
src/core_wr_nlp/: __init__.py  config.py  embed.py  io.py  pipeline.py  preprocess.py  reference.py  similarity.py  visualize.py
tests/: test_preprocess.py  test_similarity.py
