[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-wr-nlp"
version = "0.1.0"
description = "Transparent, model-agnostic pipeline to link structured planning artifacts and written reflections via semantic similarity."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Lukas Mientus"}
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
st = ["sentence-transformers>=2.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
